--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "build": "webpack",
     "watch": "webpack --watch",
     "push": "git subtree push --prefix dist origin gh-pages"
@@ -14,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
@@ -21,5 +24,6 @@
   },
   "dependencies": {
     "date-fns": "^2.30.0"
-  }
+  },
+  "main": ".eslintrc.js"
 }
